feat: chat design updated

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lint": "next lint",
     "lint:fast": "next lint --cache --cache-location .next/cache/.eslintcache",
     "lint:fix": "next lint --fix --cache",
+    "lint:staged": "eslint --fix",
     "type-check": "tsc --noEmit --incremental --tsBuildInfoFile .next/cache/tsbuildinfo",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "format:staged": "prettier --write",
     "check": "prettier --check \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
     "build:icons": "tsx src/assets/iconify-icons/bundle-icons-css.ts",
     "postinstall": "npm run build:icons",
