--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@emotion/cache": "11.13.0",
     "@emotion/react": "11.13.0",
@@ -58,6 +59,7 @@
     "classnames": "2.5.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-apexcharts": "^1.7.0",
