--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ src/assets/iconify-icons/generated-icons.css
 
 # Bundle analyzer
 .next/analyze/
+
+# Sentry Config File
+.env.sentry-build-plugin
