--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@mui/x-date-pickers": "^8.9.0",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.8.2",
+    "@sentry/nextjs": "^10.19.0",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
