--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/jspdf": "^1.3.3",
     "@types/react-datepicker": "^7.0.0",
     "@vis.gl/react-google-maps": "^1.5.3",
     "apexcharts": "^4.7.0",
@@ -61,6 +62,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-apexcharts": "^1.7.0",
