--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "dayjs": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "laravel-echo": "^2.2.4",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-apexcharts": "^1.7.0",
@@ -82,6 +83,7 @@
     "react-use": "17.5.1",
     "redux-persist": "^6.0.0",
     "server-only": "0.0.1",
+    "socket.io-client": "^4.8.1",
     "valibot": "^1.1.0"
   },
   "devDependencies": {
